--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 <input type=checkbox id=nav-trigger class=nav-trigger />
 <label for=nav-trigger></label>
 <div class=site-wrap>
-<div id=menus class=col-md-2>
+<div id=menus>
 <ul class=menu>
+    <li id="headline" class="title">MD Moore</li>
+    <li class='sub-header'> Author</li>
 <li><a href=index.html>Home</a></li>
 <li><a href=bio.html>Bio</a></li>
 <li><a href=bookpage.html>Book Page</a></li>
@@ -40,18 +42,18 @@
 </ul>
 </div>
 <div class=container>
-<div>
-<div class=col-md-8>
-<p id=headline class="title menu-div">MD Moore </p>
-<p class="sub-header menu-div">Waiting for the Cool Kind of Crazy</p>
+<div class=col-md-10>
+<div class="col-md-8">
+    <h1 class='title full-size-title'>MD Moore</h1>
+<p class="sub-header title">Author of: <br>Waiting for the Cool Kind of Crazy</p>
 </div>
-<div class='col-md-4 pull-right'>
-<img src="files/author.jpg" alt='Michael Moore'>
+<div class='col-md-4'>
+<img  src="files/author.jpg" class="img-responsive pull-right" alt='Michael Moore'>
+</div>
+<div class='pull-left' id='book-image'>
+<img class="center-block img-responsive" src="files/bookcover.jpg" width=450 alt="book cover">
 </div>
 </div>
-</div>
-<div class=center-block>
-<img style="padding-top:50px;" class=center-block src="files/bookcover.jpg" width=450 alt="book cover">
 </div>
 </div>
 </body>
