Changed site background and moved name to the top left

--- a/bookpage.html
+++ b/bookpage.html
@@ -27,8 +27,10 @@
 <input type=checkbox id=nav-trigger class=nav-trigger />
 <label for=nav-trigger></label>
 <div class=site-wrap>
-<div id=menus class=col-md-2>
+<div id=menus class=col-md-3>
 <ul class=menu>
+    <li id="headline" class="title">MD Moore</li>
+    <li class='sub-header'> Author</li>
 <li><a href=index.html>Home</a></li>
 <li><a href=bio.html>Bio</a></li>
 <li><a href=bookpage.html>Book Page</a></li>
@@ -39,14 +41,14 @@
 </li>
 </ul>
 </div>
-<div class=menu-div>
+<div class=container>
 <h2 class=title>Waiting for the Cool Kind of Crazy by M.D. Moore Released:</h2>
 <h3 class=sub-header>A stunning debut novel, Waiting for the Cool Kind of Crazy is now available nationwide</h3>
 </div>
-<div class="center-block menu-div ">
-<img style="padding-top:50px; padding-bottom: 25px" class=center-block src="files/bookcover.jpg" width=300 alt="book cover">
+<div class="center-block container">
+<img class='img-responsive center-block' style="padding-top:50px; padding-bottom: 25px" src="files/bookcover.jpg" alt="book cover">
 </div>
-<div class=menu-div>
+<div class='container'>
 <p>
 <b>SEATTLE, Wash.</b> – Black Rose Writing announces the release of <em>Waiting for the Cool Kind of Crazy</em> by M.D. Moore. <em>Waiting for the Cool Kind of Crazy</em> is now available where fine books are sold.
 </p>
