--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,10 @@
 <input type=checkbox id=nav-trigger class=nav-trigger />
 <label for=nav-trigger></label>
 <div class=site-wrap>
-<div id=menus class=col-md-2>
+<div id=menus class=col-md-3>
 <ul class=menu>
+    <li id="headline" class="title">MD Moore</li>
+    <li class='sub-header'> Author</li>
 <li><a href=index.html>Home</a></li>
 <li><a href=bio.html>Bio</a></li>
 <li><a href=bookpage.html>Book Page</a></li>
@@ -40,7 +42,7 @@
 </li>
 </ul>
 </div>
-<div class="menu-div bio">
+<div class="container bio">
 <a name=contact></a>
 <h2 class=title>Contact</h2>
 <h3 class=sub-header style=padding-top:50px;>Author</h3>
